<resources>
    <string name="app_name" translatable="false">Vuro</string>
    <string name="load_feature_dualcamera">Start Dual Camera Feature</string>
    <string name="loading">Loading</string>
    <string name="instructions">Press a button to perform an action.</string>
    <string name="force_spanish">Force Spanish</string>
    <string name="force_english">Force English</string>
    <string name="user_cancelled">The user cancelled module installation</string>
    <string name="loading_module">Loading module %1$s</string>
    <string name="loading_language">Loading language %1$s</string>
    <string name="already_installed">Already installed</string>
    <string name="starting_install_for">Starting install for %1$s</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="installing">Installing %1$s</string>
    <string name="error_for_module">Error: %1$i for module %2$s</string>
</resources>
